[gd_scene load_steps=10 format=3 uid="uid://bduk111pwxt03"]

[ext_resource type="Script" path="res://scenes/maps/MapSelection.gd" id="1_c26jd"]
[ext_resource type="Texture2D" uid="uid://c76in3ca5xqgn" path="res://assets/images/background-3.jpg" id="2_5wsiu"]
[ext_resource type="AudioStream" uid="uid://bo146jsxvubgd" path="res://audios/map-selection.ogg" id="4_qag5y"]
[ext_resource type="Texture2D" uid="uid://gwc23e7rpuwa" path="res://assets/images/black.jpg" id="4_qmvxr"]
[ext_resource type="PackedScene" uid="uid://b8jbj3f5jek44" path="res://scenes/buttons/feather.tscn" id="6_me1y8"]

[sub_resource type="Animation" id="Animation_5vfq3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Maps:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(960, -530)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/MainMenu:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(940, 520)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/MapsBG:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ccjdc"]
resource_name = "hide_maps"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Maps:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -550)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/MainMenu:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(940, 650), Vector2(940, 520)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/MapsBG:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -550)]
}

[sub_resource type="Animation" id="Animation_n0ipw"]
resource_name = "show_maps"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Maps:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -550), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/MainMenu:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(940, 520), Vector2(940, 650)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/MapsBG:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -550), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_57xjl"]
_data = {
"RESET": SubResource("Animation_5vfq3"),
"hide_maps": SubResource("Animation_ccjdc"),
"show_maps": SubResource("Animation_n0ipw")
}

[node name="MapSelection" type="Node2D"]
script = ExtResource("1_c26jd")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainer"]
modulate = Color(0.404511, 0.404511, 0.404511, 1)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_5wsiu")

[node name="MainMenu" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 1920.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" parent="CanvasLayer/MainMenu" instance=ExtResource("6_me1y8")]
position = Vector2(-171, 47)
key = "Button_Start"

[node name="Practice" parent="CanvasLayer/MainMenu" instance=ExtResource("6_me1y8")]
position = Vector2(-171, -161)
key = "Button_Practice"
color = "blue"

[node name="MapsBG" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = -550.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MapsBG"]
modulate = Color(1, 1, 1, 0.470588)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_qmvxr")
expand_mode = 1

[node name="Maps" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -960.0
offset_top = -550.0
offset_right = -960.0
offset_bottom = -450.0
grow_horizontal = 2
scale = Vector2(1, 5.52)
size_flags_horizontal = 4

[node name="Firstshot" parent="CanvasLayer/Maps" instance=ExtResource("6_me1y8")]
position = Vector2(520, 57.6087)
scale = Vector2(1, 0.181159)
key = "MAP_0"
color = "cyan"

[node name="SunnyTown" parent="CanvasLayer/Maps" instance=ExtResource("6_me1y8")]
position = Vector2(1101, 55.4348)
scale = Vector2(1, 0.181159)
key = "MAP_1"
disabled = true
color = "red"

[node name="FoggyValley" parent="CanvasLayer/Maps" instance=ExtResource("6_me1y8")]
position = Vector2(173, 20.6522)
scale = Vector2(1, 0.181159)
key = "MAP_2"
disabled = true
color = "purple"

[node name="ThreeVillages" parent="CanvasLayer/Maps" instance=ExtResource("6_me1y8")]
position = Vector2(788, 19.3841)
scale = Vector2(1, 0.181159)
key = "MAP_3"
disabled = true
color = "green"

[node name="Oasis" parent="CanvasLayer/Maps" instance=ExtResource("6_me1y8")]
position = Vector2(1388, 19.2029)
scale = Vector2(1, 0.181159)
key = "MAP_4"
disabled = true
color = "yellow"

[node name="Quit" parent="CanvasLayer" instance=ExtResource("6_me1y8")]
position = Vector2(1400, 866)
key = "QUIT"
color = "blue"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qag5y")
volume_db = -20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_57xjl")
}

[connection signal="clicked" from="CanvasLayer/MainMenu/Start" to="." method="start_game"]
[connection signal="clicked" from="CanvasLayer/MainMenu/Practice" to="." method="toggle_practice_maps"]
[connection signal="clicked" from="CanvasLayer/Maps/Firstshot" to="." method="switch_to_practice"]
[connection signal="clicked" from="CanvasLayer/Maps/SunnyTown" to="." method="switch_to_sunny_town"]
[connection signal="clicked" from="CanvasLayer/Maps/FoggyValley" to="." method="switch_to_foggy_valley"]
[connection signal="clicked" from="CanvasLayer/Maps/ThreeVillages" to="." method="switch_to_three_villages"]
[connection signal="clicked" from="CanvasLayer/Maps/Oasis" to="." method="switch_to_oasis"]
[connection signal="clicked" from="CanvasLayer/Quit" to="." method="quit"]
